// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`__filename-and-__dirname.js 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "{
  __filename: "<rootDir>/src/test_fixtures/scripts/__filename-and-__dirname.js"
  __dirname: "<rootDir>/src/test_fixtures/scripts"
}
{
  __filename: "<rootDir>/src/test_fixtures/scripts/__filename-and-__dirname-2.js"
  __dirname: "<rootDir>/src/test_fixtures/scripts"
}
",
}
`;

exports[`__filename-and-__dirname-2.js 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "",
}
`;

exports[`importing-json.js 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "{
  hello: "there"
}
",
}
`;

exports[`some-coffeescript.coffee 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "object
object
false
",
}
`;

exports[`some-json.json 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "",
}
`;

exports[`some-jsx.jsx 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "{
  $$typeof: Symbol(JSX.Element)
  type: "a"
  props: null
  key: null
}
true
false
true
false
false
",
}
`;

exports[`some-tsx.tsx 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "{
  $$typeof: Symbol(JSX.Element)
  type: "a"
  props: null
  key: null
}
true
false
true
false
false
",
}
`;

exports[`some-typescript.ts 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "undefined
object true
path: <rootDir>/src/test_fixtures/scripts
<rootDir>/src/test_fixtures/scripts
",
}
`;
